--- a/style/style.css
+++ b/style/style.css
@@ -101,9 +101,19 @@ ul {
   border: 1px solid var(--white);
 }
 
+@media screen and (max-width: 320px) {
+  .header {
+    height: 90vh;
+  }
+
+  .header__main-tittle {
+    margin-top: 100px;
+  }
+}
+
 /* DESIGN FEATURE */
 .feature {
-  margin: 2rem 1rem;
+  margin: 1rem 1rem;
 }
 
 .feature__img-wrapper > [class*="-desktop"] {
@@ -135,6 +145,7 @@ ul {
 
 /* infrastructure feature */
 .state-of-art {
+ 
 }
 
 .state-of-art__phones-wrapper {
@@ -182,9 +193,60 @@ ul {
   line-height: 1.5rem;
 }
 
+/* FEAUTURE FREE */
+.feature.free {
+  position: relative;
+  bottom: 130px;
+  margin-bottom: 0;
+}
+
+.free .feature__paragraph {
+  margin-bottom: 0;
+}
+
+/* FOOTER */
+
+.footer {
+  background-color: var(--very-dark-black-blue);
+  border-top-right-radius: 100px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer a {
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.footer__logo {
+  display: block;
+  padding: 4rem 0 3.5rem 0;
+}
+
+.footer__main-title {
+  color: var(--white);
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.2rem;
+  
+}
+
+.footer__lists {
+  margin: 1.2rem 0 1rem 0;
+}
+
+.footer__lists a {
+  color: var(--grayish-blue);
+  line-height: 1.8;
+}
+
+.main-list__element {
+  margin: 2rem;
+}
+
+
 /* MENU-HAMBURGER */
 .menu-btn {
-  position: fixed;
+  position: absolute;
   right: 5%;
   top: 8.5%;
   width: 2.5rem;
@@ -203,7 +265,7 @@ ul {
 
 .mobile-nav {
   display: none;
-  position: fixed;
+  position: absolute;
   top: 15%;
   left: 50%;
   transform: translateX(-50%);
@@ -215,6 +277,9 @@ ul {
   border-radius: 0.5rem;
   font-family: "Overpass", sans-serif;
   font-weight: 600;
+  overflow-y: auto;
+  z-index: 999;
+  height: 55vh;
 }
 
 .mobile-nav__item {
@@ -247,6 +312,7 @@ ul {
   display: none;
   margin: 20px 0;
   width: 80%;
+  height: auto;
   margin: 0 auto;
   border-radius: 0.5rem;
   background-color: hsla(240, 1%, 86%, 0.61);
