--- a/style/style.css
+++ b/style/style.css
@@ -154,6 +154,8 @@ ul {
 
 .state-of-art__phones-wrapper {
   text-align: center;
+  opacity: 0
+  ;
 }
 
 .state-of-art__phones-wrapper .phones {
@@ -530,21 +532,24 @@ ul {
   .state-of-art {
     position: relative;
     top: 20px;
+    overflow: hidden;
   }
 
   .state-of-art__content {
+    position: relative;
     display: block;
     width: 100%;
     text-align: right;
     top: 0;
     height: 35%;
+    overflow: hidden;
   }
 
   .content-wrapper {
     width: 40%;
-    position: relative;
+    position: absolute;
     left: 50%;
-    bottom: 30px;
+    bottom: 200px;
     align-self: end;
     justify-self: end;
   }
@@ -572,14 +577,14 @@ ul {
   }
 
   .footer {
-  background-color: var(--very-dark-black-blue);
-  border-top-right-radius: 100px;
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-}
+    background-color: var(--very-dark-black-blue);
+    border-top-right-radius: 100px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 
   .footer__list {
     display: flex;
@@ -587,6 +592,5 @@ ul {
   }
 }
 
-@media  screen and (min-width: 1024px) {
-  
+@media screen and (min-width: 1024px) {
 }
